# remote_poc

./: .gitignore  README.md  dialogue_sample.json  pyproject.toml  report_template.json  requirements.txt  sample.json
.github/workflows/: pages.yml
docs/: index.html
golden/: manifest.json
golden/bp_only/: dialogue.json  expected_report.json
golden/cloudy_dialysate/: dialogue.json  expected_report.json
golden/minimal_turn/: dialogue.json  expected_report.json
golden/wild_v2/: expected_evidence.json  expected_report.json
poc/: patient_master.example.json
prompts/: glossary.txt  system_extract.txt
schemas/: extracted_facts.schema.json
scripts/: build_docs.py  eval.py
src/pipeline/: __init__.py  cli.py  extract_facts.py  map_to_report.py  merge_master.py  policies.py  preprocess.py  validate.py
src/webui/: __init__.py  __main__.py  app.py
src/webui/static/: style.css
src/webui/templates/: index.html
tests/: test_golden.py
