[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-poc"
version = "0.1.0"
dependencies = [
  "jsonschema>=4.20.0",
  "openai>=1.40.0",
]
requires-python = ">=3.11"

[project.scripts]
remote-poc-demo = "webui.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
ui = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "jinja2>=3.1.0",
]

[tool.setuptools.package-data]
webui = ["templates/*.html", "static/*.css"]

[tool.setuptools.packages.find]
where = ["src"]
